# elasticpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: debug.yml  release.yml
include/elasticpp/: ElastiCpp.h  defines.h  elasticpp.h
src/: CMakeLists.txt  ElastiCpp.cpp  elasticpp.cpp  main.cpp  version.h.in
test/: CMakeLists.txt  ElastiCppTest.cpp  elasticppTest.cpp
